--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     },
     "dependencies": {
         "botbuilder": "^4.2.0",
-        "botframework-config": "^4.2.0",
+        "botbuilder-dialogs": "^4.2.0",
+        "botframework-config": "^4.3.4",
         "dotenv": "^6.1.0",
         "restify": "^7.2.3"
     },
