--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "botbuilder": "^4.2.0",
+        "botbuilder-ai": "^4.3.4",
         "botbuilder-dialogs": "^4.2.0",
         "botframework-config": "^4.3.4",
         "dotenv": "^6.1.0",
