--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
         "url": "https://github.com"
     },
     "dependencies": {
+        "azure-search-client": "^3.1.5",
         "botbuilder": "^4.3.4",
         "botbuilder-ai": "^4.3.4",
         "botbuilder-dialogs": "^4.3.3",
         "botframework-config": "^4.3.4",
         "dotenv": "^6.1.0",
+        "node-fetch": "^2.3.0",
         "restify": "^8.2.0"
     },
     "devDependencies": {
